force-app/main/default/objects/Account/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <description>Account Category</description>
    <inlineHelpText>Account Category</inlineHelpText>
    <label>Account Category</label>
    <length>200</length>
    <type>Text</type>
</CustomField>