force-app/main/default/objects/Account/fields/AI_Level__c.field-meta.xml
<CustomField>
    <fullName>AI_Level__c</fullName>
    <label>AI Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>