force-app/main/default/objects/Account/fields/CST__c.field-meta.xml
<CustomField>
    <fullName>CST__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a new checkbox field</description>
    <label>CST</label>
    <type>Checkbox</type>
</CustomField>