force-app/main/default/objects/Account/fields/SBA_Number__c.field-meta.xml
<CustomField>
    <fullName>SBA_Number__c</fullName>
    <label>SBA Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>