force-app/main/default/objects/Account/fields/Test_Date_Field_Account__c.field-meta.xml
<CustomField>
    <fullName>Test_Date_Field_Account__c</fullName>
    <label>Test Date Field - Account</label>
    <type>Date</type>
</CustomField>