force-app/main/default/objects/Account/fields/testpoc__c.field-meta.xml
<CustomField>
    <fullName>testpoc__c</fullName>
    <inlineHelpText>test the new field with copado pipe line</inlineHelpText>
    <label>testpoc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>